<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".jugsdorvsJugador">


    <ImageView
        android:id="@+id/Datojugador"
        android:layout_width="148dp"
        android:layout_height="164dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="116dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pngwing_com" />

    <ImageView
        android:id="@+id/Datomaquina"
        android:layout_width="137dp"
        android:layout_height="161dp"
        android:layout_marginStart="256dp"
        android:layout_marginTop="116dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pngwing_com" />

    <ImageView
        android:id="@+id/piedra"
        android:layout_width="121dp"
        android:layout_height="101dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="228dp"
        android:onClick="cambiaimagen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/piedra" />

    <ImageView
        android:id="@+id/tijera"
        android:layout_width="111dp"
        android:layout_height="106dp"
        android:layout_marginBottom="224dp"
        android:onClick="cambiaimagen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/tijera" />

    <ImageView
        android:id="@+id/papel"
        android:layout_width="112dp"
        android:layout_height="102dp"
        android:layout_marginBottom="228dp"
        android:onClick="cambiaimagen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/papel" />

    <ImageView
        android:id="@+id/lagarto"
        android:layout_width="142dp"
        android:layout_height="167dp"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="48dp"
        android:onClick="cambiaimagen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/lagarto" />

    <ImageView
        android:id="@+id/spok"
        android:layout_width="141dp"
        android:layout_height="165dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="44dp"
        android:onClick="cambiaimagen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/spock" />

    <TextView
        android:id="@+id/Resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="header"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nombre2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.115" />

</androidx.constraintlayout.widget.ConstraintLayout>