...
        android:onClick="sonido"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cogwheel_g2f0922ca9_1280" />

    <Button
        android:id="@+id/option2"
        android:layout_width="325dp"
        android:layout_height="56dp"
        android:onClick="PlayClick2"
        android:text="opcion2"
        android:textSize="20sp"
        android:textStyle="bold"
...
